@@ -23,8 +23,8 @@ var init = null;
 
 /* Stats */
 function initStats(Server) {
-    const STAT_INTERVAL = 60 * 60 * 1000;
-    const STAT_EXPIRE = 24 * STAT_INTERVAL;
+    var STAT_INTERVAL = Server.cfg["stat-interval"];
+    var STAT_EXPIRE = Server.cfg["stat-max-age"];
 
     setInterval(function () {
         var db = Server.db;
@@ -44,11 +44,10 @@ function initStats(Server) {
 
 /* Alias cleanup */
 function initAliasCleanup(Server) {
-    const CLEAN_INTERVAL = 60 * 60 * 1000;
-    const CLEAN_EXPIRE = 30 * 24 * 60 * 60 * 1000; // 1 month
+    var CLEAN_INTERVAL = Server.cfg["alias-purge-interval"];
+    var CLEAN_EXPIRE = Server.cfg["alias-max-age"];
 
     setInterval(function () {
-        console.log("cleaning aliases");
         Server.db.cleanOldAliases(CLEAN_EXPIRE, function (err) {
             Logger.syslog.log("Cleaned old aliases");
             if (err)
