@@ -44,7 +44,11 @@ var defaults = {
     "domain"              : "http://localhost",
     "ytv3apikey"          : "",
     "enable-ytv3"         : false,
-    "ytv2devkey"          : ""
+    "ytv2devkey"          : "",
+    "stat-interval"       : 3600000,
+    "stat-max-age"        : 86400000,
+    "alias-purge-interval": 3600000,
+    "alias-max-age"       : 2592000000
 }
 
 function save(cfg, file) {
